Fix centered tab alignment

--- a/src/app/tabs.scss
+++ b/src/app/tabs.scss
@@ -151,6 +151,19 @@ body:not(.is-phone).tab-floating-center .mod-root .workspace-tabs:not(.mod-stack
 body.mod-macos:not(.is-mobile).tab-floating-center {
   .mod-root .workspace-tabs:not(.mod-stacked) {
     @container (min-width: 560px) {
+      // Right sidedock hidden
+      &:not(.mod-top-left-space).mod-top-right-space .workspace-tab-header-container-inner {
+        padding-left: calc(var(--tab-action-width) * 3);
+      }
+      // Both sidedocks shown
+      &:not(.mod-top-left-space):not(.mod-top-right-space) .workspace-tab-header-container-inner {
+        padding-left: calc(var(--tab-action-width) * 2);
+      }
+    }
+  }
+
+  &:not(.is-fullscreen) .mod-root .workspace-tabs:not(.mod-stacked) {
+    @container (min-width: 560px) {
       // Both sidedocks hidden
       &.mod-top-left-space.mod-top-right-space .workspace-tab-header-container-inner {
         padding-right: calc(var(--frame-left-space) + calc(--tab-action-width) * 2);
@@ -159,13 +172,18 @@ body.mod-macos:not(.is-mobile).tab-floating-center {
       &.mod-top-left-space:not(.mod-top-right-space) .workspace-tab-header-container-inner {
         padding-right: calc(var(--frame-left-space) - var(--tab-action-width));
       }
-      // Right sidedock hidden
-      &:not(.mod-top-left-space).mod-top-right-space .workspace-tab-header-container-inner {
-        padding-left: calc(var(--tab-action-width) * 3);
-      }
-      // Both sidedocks shown
-      &:not(.mod-top-left-space):not(.mod-top-right-space) .workspace-tab-header-container-inner {
+    }
+  }
+  
+  &.is-fullscreen .mod-root .workspace-tabs:not(.mod-stacked) {
+    @container (min-width: 560px) {
+      // Both sidedocks hidden
+      &.mod-top-left-space.mod-top-right-space .workspace-tab-header-container-inner {
         padding-left: calc(var(--tab-action-width) * 2);
+      }
+      // Left sidedock hidden
+      &.mod-top-left-space:not(.mod-top-right-space) .workspace-tab-header-container-inner {
+        padding-left: var(--tab-action-width);
       }
     }
   }
