--- a/src/layouts/fusion.scss
+++ b/src/layouts/fusion.scss
@@ -46,9 +46,6 @@ body.layout-fusion:not(.is-phone) {
   // Editor panel: Tab style
   &.input-cupertino:is(.tab-floating, .tab-floating-center) {
     .mod-root .workspace-tabs:not(.mod-stacked) {
-      .workspace-tab-header-container-inner {
-        padding-inline: 4px;
-      }
       .workspace-tab-header {
         @starting-style {
           filter: blur(4px);
